--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             margin: 0;
         }
         </style>
-        <title></title>
+        <title>Alertas Satelitales de Cianobacterias - Bs As,</title>
     </head>
     <body>
         <div id="map">
@@ -57,8 +57,8 @@
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/photon-geocoder-autocomplete.min.js"></script>
-        <script src="layers/Datos_Lugar_250306_copia_1.js"></script><script src="layers/CianoSemSat_20260205_2.js"></script>
-        <script src="styles/Datos_Lugar_250306_copia_1_style.js"></script><script src="styles/CianoSemSat_20260205_2_style.js"></script>
+        <script src="layers/AlertaCiano_1.js"></script>
+        <script src="styles/AlertaCiano_1_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
